src/objects/Customer_Bookings_Bucketed_Snapshot__c.object
<CustomObject>
    <description>Custom Object for Active Customers by bucketed Total Bookings by last update date (bucketed)</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Execution_Time__c</fullName>
        <label>Execution Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Bookings_Bucketed__c</fullName>
        <formula>IF(Total_Bookings__c &lt;= 10000, &quot;$0-10K&quot;,
IF(Total_Bookings__c &lt;= 25000, &quot;$10-$25K&quot;,
IF(Total_Bookings__c &lt;= 50000, &quot;$25-$50K&quot;,
IF(Total_Bookings__c &lt;= 100000, &quot;$50-$100K&quot;,
IF(Total_Bookings__c &lt;= 250000, &quot;$100-$250K&quot;,
IF(Total_Bookings__c &lt;= 500000, &quot;$250-$500K&quot;,
IF(Total_Bookings__c &lt;= 1000000,&quot;$500K-$1M&quot;,&quot;$1M+&quot;)))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Bookings (Bucketed)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Bookings__c</fullName>
        <label>Total Bookings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Customer Bookings (Bucketed) Snapshot</label>
    <nameField>
        <label>Customer Bookings (Bucketed) Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Bookings (Bucketed) Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>